fix: comment overflow

--- a/frontend/src/components/update-restaurant/update-restaurant.scss
+++ b/frontend/src/components/update-restaurant/update-restaurant.scss
@@ -53,24 +53,34 @@
 
   .slider {
     all: initial;
+    -webkit-appearance: none;
     margin-left: 0.5rem;
     background-color: scss.$main-color;
     border-radius: 0.5rem;
     justify-self: center;
     align-self: center;
-    overflow: hidden;
     flex: 2;
+
+    &::-webkit-slider-runnable-track {
+      -webkit-appearance: none;
+      width: 100%;
+      height: 1rem;
+      cursor: pointer;
+      background: scss.$main-color;
+      border-radius: 0.2rem;
+    }
 
     &::-webkit-slider-thumb {
       -webkit-appearance: none;
       border: 1px solid #333;
-      height: 1rem;
+      height: 2rem;
       width: 1rem;
       padding-top: 1rem;
       border-radius: 5px;
       background: #ddd;
       cursor: pointer;
-      box-shadow: 1px 1px 1px #000000, 0px 0px 1px #0d0d0d;
+      margin-top: -0.5rem;
+      box-shadow: 1px 1px 1px #000000;
     }
   }
 }
